# ghbuster

./: .gitignore  CODEOWNERS  LICENSE-3rdparty.csv  README.md  pyproject.toml
ghbuster/: __init__.py  __main__.py  cli.py  github_repo_scanner.py  output_formatter.py
ghbuster/heuristics/: __init__.py  base.py  graph.py  repo_commits_only_from_suspicious_unlinked_emails.py  repo_has_stargazzers_who_joined_the_same_day.py  repo_starred_by_suspicious_users.py  user_has_forks_from_taken_down_repos.py  user_has_low_community_activity.py  user_has_only_commits_from_unlinked_emails.py  user_has_only_forks.py  user_looks_legit.py  user_metadata_basic.py
ghbuster/service/: emails_extractor.py  github_archive.py
scripts/: generate_heuristics_docs.py
tests/heuristics/: test_repo_has_stargazzers_who_joined_the_same_day.py  test_user_has_forks_from_taken_down_repos.py  test_user_has_low_community_activity.py  test_user_has_only_forks.py  test_user_just_joined.py  test_user_missing_common_fields.py
tests/test_utils/: date_utils.py  mock_utils.py
