[project]
name = "ghbuster"
version = "0.1.0"
description = "A tool to identify and investigate inauthentic GitHub user accounts and repositories"
requires-python = ">=3.10"
dependencies = [
    "networkx[default]>=3.4.2",
    "pygithub>=2.6.1",
    "pyvis>=0.3.2",
    "requests-cache>=1.2.1",
]

[project.scripts]
ghbuster = "ghbuster.__main__:main"
